// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserInfo /> renders an error if loading failed 1`] = `
<div
  className={undefined}
>
  <p>
    Oops, Failed to load info!
  </p>
</div>
`;

exports[`<UserInfo /> renders nothing if no data 1`] = `
<div
  className={undefined}
/>
`;

exports[`<UserInfo /> renders the <UserCard /> if loading was successful 1`] = `
<div
  className={undefined}
>
  <UserCard
    info={
      Object {
        "email": "test@gmail.com",
        "name": "Welly",
        "phone": "007",
        "website": "www.test.com",
      }
    }
  />
</div>
`;

exports[`<UserInfo /> renders the loading status while requesting data 1`] = `
<div
  className={undefined}
>
  <p>
    Loading...
  </p>
</div>
`;
